# Qurio

./: .env.example  .gitignore  .prettierrc  LICENSE  README.md  SUPABASE_SCHEMA.md  components.json  eslint.config.js  index.html  inspect_data.js  langchain-mcp-adapters-1.1.1.tgz  middleware.js  netlify.toml  next.config.mjs  package-lock.json  package.json  rsbuild.config.js  update_capsule.py  vite.config.js
.agent/rules/: code-style-guide.md
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci-cd.yml  codeql-analysis.yml  dependency-update.yml
backend/: .env.example  RETRY_TEST_GUIDE.md  STREAMING_SSE.md  package.json
backend-python/: .env.example  .gitignore  MIGRATION_PLAN.md  README.md  pyproject.toml  run.py
backend-python/docs/: AGNO-memory-integration.md
backend-python/src/: __init__.py  config.py  main.py
backend-python/src/models/: __init__.py  memory.py  stream_chat.py
backend-python/src/prompts/: __init__.py  deep_research_prompts.py  research_plan_prompts.py
backend-python/src/providers/: __init__.py  base.py  factory.py  openai.py  other_providers.py
backend-python/src/routes/: __init__.py  agent_for_auto.py  daily_tip.py  deep_research.py  mcp_tools.py  memory.py  related_questions.py  research_plan.py  stream_chat.py  title.py  title_and_space.py  title_space_agent.py
backend-python/src/services/: __init__.py  academic_domains.py  agent_os_app.py  agent_registry.py  custom_tools.py  deep_research.py  generation.py  llm_utils.py  mcp_tools.py  memory_service.py  research_plan.py  stream_chat.py  tool_registry.py  tools.py  tools_exec.py  user_tools.py
backend-python/src/utils/: __init__.py  sse.py
backend/doc/: TOOLS_ARCHITECTURE.md
backend/docs/: AGNO-memory-integration.md
backend/src/: server.js
docs/: README.md  TODO.md  agno-backend.md  backend-migration-python.md  concurrent-academic-research.md  custom-provider-implementation.md  custom-tool-flow.md  document-retrieval-updates.md  document-selection-sending.md  glm-tool-stream-implementation.md  hierarchical_chunking.md  interactive-form-rendering.md  knowledge-base-data-structure.md  long-term-memory-domains.md  mcp-tools-flow.md  pdf-font-analysis.md  rig-migration.md  rust-provider-logic.md
netlify/edge-functions/: llm-models.js  llm-stream.js  llm-task.js
pages/: [[...path]].jsx  _app.jsx
public/: 404.html  manifest.json  sw.js
scripts/: tauri-dev-with-backend.js  tauri-dev-with-node.js
src/: App.jsx  ClientApp.jsx  index.css  main.jsx  router.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  rig_server.rs
src-tauri/src/modules/: deep_research.rs  local_tools.rs  mcp_manager.rs  mod.rs  research_plan.rs
src-tauri/src/providers/: constants.rs  glm_provider.rs  kimi_provider.rs  minimax_provider.rs  mod.rs  modelscope_provider.rs  nvidia_provider.rs  siliconflow_provider.rs
src-tauri/src/providers/adapters/: base.rs  factory.rs  gemini.rs  glm.rs  kimi.rs  minimax.rs  mod.rs  modelscope.rs  nvidia.rs  openai.rs  siliconflow.rs  traits.rs
src/components/: AgentModal.jsx  ChatInterface.jsx  ConfirmationModal.jsx  ConversationsListView.jsx  CustomEmojiPicker.jsx  DeepResearchCard.jsx  DeepResearchChatInterface.jsx  DesktopSourcesSection.jsx  DocumentSourcesPanel.jsx  DocumentsSection.jsx  DotLoader.jsx  DropdownMenu.jsx  EmojiDisplay.jsx  FancyLoader.jsx  GitHubPagesRedirectHandler.jsx  InteractiveForm.jsx  KnowledgeBaseModal.jsx  Logo.jsx  MainContent.jsx  MessageBubble.jsx  MessageList.jsx  MobileDrawer.jsx  MobileSourcesDrawer.jsx  QuestionNavigator.jsx  QuestionTimelineController.jsx  QuestionTimelineSidebar.jsx  ResearchTimelineController.jsx  (+15 more)
supabase/: init.sql  schema.sql
tauri-docs/: android-studio.md  desktop-testing.md
(+196 files in other folders)
