[project]
name = "qurio-backend"
version = "0.1.0"
description = "Qurio Backend with FastAPI + Agno"
authors = [
    {name = "Qurio", email = "info@qur.io"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "agno>=0.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "google-generativeai>=0.8.0",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.1.0",
    "aiofiles>=24.1.0",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
    "yfinance>=0.2.0",
    "arxiv>=2.0.0",
    "wikipedia>=1.4.0",
    "ddgs>=0.0.0",
    "google-genai>=0.0.0",
    "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
