[package]
name = "qurio"
version = "0.0.1"
description = "Qurio desktop app"
authors = ["Qurio"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.5.3", features = [] }
axum = "0.7.9"
async-stream = "0.3.6"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
futures = "0.3.31"
jsonrepair = "0.1.0"
meval = "0.2.0"
regex = "1.11.2"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
rig-core = { version = "0.28.0", features = ["rmcp"] }
rmcp = { version = "0.13.0", features = ["client", "transport-streamable-http-client-reqwest"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.69"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.0"
once_cell = "1.20.2"
tracing = "0.1"
